# voice

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: app.slint  audio.rs  config.rs  downloader.rs  injector.rs  main.rs  transcriber.rs  vad.rs
